try to fix figure spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -999,6 +999,7 @@ pre code {
   text-decoration: none;
   text-align: center;
   height: 500px;
+  margin: 30px;
 }
 
 .science-figure p {
